fix add race selectors and some whitespace

--- a/components/CandidateGuideEmbed/CandidateGuideEmbed.module.scss
+++ b/components/CandidateGuideEmbed/CandidateGuideEmbed.module.scss
@@ -123,7 +123,7 @@
   font-family: $font-primary;
   border: none;
   cursor: pointer;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 
   &:hover {
     color: $blue-text;
